add: functionality to kick members of group
