# internal/domain/member/dto.go
@@ -1,8 +1,8 @@
 package member
 
 type MemberDTO struct {
-	MemberID uint64 `db:"member_id"`
-	Username string `db:"username"`
-	Gender   string `db:"gender"`
-	Role     string `db:"role"`
+	MemberID uint64 `json:"member_id"  db:"member_id"`
+	Username string `json:"username" db:"username"`
+	Gender   string `json:"gender" db:"gender"`
+	Role     string `json:"role" db:"role"`
 }
